<resources>

    <string name="app_name">END.</string>

    <string name="loading">Loading…</string>

    <string name="connection_problem">Connection problem</string>
    <string name="there_is_a_problem_connecting">There is a problem connecting to our servers. Press OK to try again. Error (1599)</string>

    <string name="ok">OK</string>

    <string name="sort">Sort</string>
    <string name="view">View</string>
    <string name="filter">Filter</string>

    <string name="brand">brand</string>
    <string name="department">department</string>
    <string name="colour">colour</string>
    <string name="clothing_size">clothing size</string>
    <string name="footwear_size">footwear size</string>
    <string name="all">All</string>

    <string name="producer_default_value">Default Producer</string>
    <string name="color_default_value">Default Colour</string>

</resources>
