<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/side_drawer_layout">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:orientation="horizontal"
            android:background="@drawable/background_badge"
            android:elevation="@dimen/side_drawer_top_bar_elevation">

        <ImageButton
                android:id="@+id/close_btn"
                android:layout_width="@dimen/appbar_icon_width"
                android:layout_height="@dimen/appbar_icon_width"
                android:layout_marginStart="@dimen/appbar_margin_start"
                android:scaleType="fitCenter"
                android:src="@drawable/cross_image"
                android:background="@null"
                android:layout_gravity="center"/>

        <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/appbar_title_margin_start"
                android:gravity="center"
                android:text="@string/filter"
                android:textAllCaps="true"
                android:letterSpacing="0.08"
                android:textStyle="bold"
                android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/side_drawer_element_padding"
            android:paddingBottom="@dimen/side_drawer_element_padding"
            android:orientation="vertical">

            <TextView
                    style="@style/SideDrawerElementTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/side_drawer_element_internal_spacing"
                    android:text="@string/brand"/>

            <TextView
                    style="@style/SideDrawerElementSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/side_drawer_element_bottom_spacing"
                    android:text="@string/all"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorTextAlternative"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/side_drawer_element_padding"
            android:paddingBottom="@dimen/side_drawer_element_padding"
            android:orientation="vertical">

        <TextView
                style="@style/SideDrawerElementTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_internal_spacing"
                android:text="@string/department"/>

        <TextView
                style="@style/SideDrawerElementSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_bottom_spacing"
                android:text="@string/all"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorTextAlternative"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/side_drawer_element_padding"
            android:paddingBottom="@dimen/side_drawer_element_padding"
            android:orientation="vertical">

        <TextView
                style="@style/SideDrawerElementTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_internal_spacing"
                android:text="@string/colour"/>

        <TextView
                style="@style/SideDrawerElementSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_bottom_spacing"
                android:text="@string/all"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorTextAlternative"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/side_drawer_element_padding"
            android:paddingBottom="@dimen/side_drawer_element_padding"
            android:orientation="vertical">

        <TextView
                style="@style/SideDrawerElementTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_internal_spacing"
                android:text="@string/clothing_size"/>

        <TextView
                style="@style/SideDrawerElementSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_bottom_spacing"
                android:text="@string/all"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorTextAlternative"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/side_drawer_element_padding"
            android:paddingBottom="@dimen/side_drawer_element_padding"
            android:orientation="vertical">

        <TextView
                style="@style/SideDrawerElementTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_internal_spacing"
                android:text="@string/footwear_size"/>

        <TextView
                style="@style/SideDrawerElementSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_drawer_element_bottom_spacing"
                android:text="@string/all"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorTextAlternative"/>

    </LinearLayout>

</LinearLayout>